# AutonomousRacing

./: .gitignore  CMakeLists.txt  README.md  main_car.py  main_gym.py  main_meas.py  package.xml  requirements.txt  setup.py
F1tenthGym/: MPC_Linear.py  config_Spielberg_map.yaml
algorithms/: DisparityExtender.py  GapFollower.py  MPC_Linear.py  ManeuverAutomaton.py  PurePersuit.py  SwitchingDriver.py
auxiliary/: FakeMapSimulator.py  Line.py  Polygon.py  Polytope.py  ScanSimulator.py  adaptive_cruise_control.py  free_space.py  parse_settings.py  process_lidar_data.py  raceline.py  vehicle_model.py
generation/: generate_contour.py
localization/: IterativeClosestLine.py  ParticleFilter.py
measurements/racetrack_1/: control.csv  odometry.csv
racetracks/ICRA/: ICRA.yaml  centerline.csv  config_ICRA.yaml  contour_inner.csv  contour_outer.csv  raceline.csv  traj_race_cl.csv
racetracks/ICRAfake/: ICRAfake.yaml  config_ICRAfake.yaml
racetracks/Oschersleben/: config_Oschersleben.yaml  config_Oschersleben_map.yaml  contour_inner.csv  contour_outer.csv  settings_Oschersleben_MPC_Linear.txt  settings_Oschersleben_ManeuverAutomaton.txt
racetracks/OscherslebenICRA/: OscherslebenICRA.yaml  centerline.csv  config_OscherslebenICRA.yaml  contour_inner.csv  contour_outer.csv  raceline.csv
racetracks/Silverstone/: Silverstone.yaml  config_Silverstone.yaml
racetracks/Sochi/: Sochi.yaml  (+1 more)
settings/: DisparityExtender.cfg  GapFollower.cfg  IterativeClosestLine.cfg  MPC_Linear.cfg  ManeuverAutomaton.cfg  ParticleFilter.cfg  PurePersuit.cfg  SwitchingDriver.cfg
(+38 files in other folders)
